fix bug on close button form nav menu not showing

--- a/frontend/src/blocks/header/__nav-button/_close/header__nav-button_close.css
+++ b/frontend/src/blocks/header/__nav-button/_close/header__nav-button_close.css
@@ -1,3 +1,3 @@
 .header__nav-button_close {
-  background-image: url(../../../images/close-menu.png);
+  background-image: url(../../../../images/close-menu.png);
 }
